tests/samples/compile_errors/const_expression/references_variable.bas
Attribute VB_Name = "ConstFromVar"
Sub TestConst()
    Dim runtimeValue As Long
    runtimeValue = 42
    Const X As Long = runtimeValue  ' references runtime variable
End Sub
